Fix overlapping labels bug
-- Home page only shows first label (alphabetically)
-- Full-width hero articles position relative labels

--- a/wp-content/themes/ednc-roots/assets/public/css/main.css
+++ b/wp-content/themes/ednc-roots/assets/public/css/main.css
@@ -9579,6 +9579,9 @@ section {
 .hentry .entry-header.photo-overlay img {
   position: relative;
 }
+.hentry .entry-header.photo-overlay .label {
+  position: relative;
+}
 .hentry .entry-header.photo-overlay h1 {
   margin-top: 0;
   padding-top: 28px;
